--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@
         <div class="row">
             <div class="col-md-6 ">
                 <div class="img-box">
-                    <img src="assets/images/img-1.jpg}" alt="">
+                    <img src="assets/images/img-1.jpg" alt="">
                 </div>
             </div>
             <div class="col-md-6">
